--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,3 @@
-@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -41,6 +40,14 @@
 body {
   @apply bg-[#110f1c] text-white;
   text-rendering: geometricPrecision;
+  padding: 0;
+  margin: 0;
+}
+
+button,
+input {
+  border: none;
+  font-family: inherit;
 }
 
 @layer utilities {
